Fix drag issue on iOs

--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -88,7 +88,7 @@
     max-width: 100%;
   }
   .hero-svg-logo {
-    left: 55%;
+    left: 47%;
     top: 36%;
     width: 50%;
   }
